# ougc-igc-app

./: .eslintrc.js  .gitignore  .prettierignore  index.html  package.json  prettier.config.js  tsconfig.json
.github/workflows/: ci.yml
src/: index.css  main.tsx  path.ts  util.ts
src-tauri/: Cargo.toml  tauri.conf.json
src/components/: App.tsx
src/components/Step1/: FileList.tsx  IgcSelectButton.tsx  index.tsx
src/components/Step2/: index.tsx
src/components/Step3/: DataList.tsx  FlightLogTable.tsx  index.tsx
src/components/Step4/: index.tsx
src/flight/: compareFlightLog.ts  igc.ts  nameFlightLog.ts  types.ts
